[gd_scene load_steps=9 format=2]

[ext_resource path="res://data/sprites/misc/background.png" type="Texture" id=1]
[ext_resource path="res://data/tileSets/tres/stoneTiles.tres" type="TileSet" id=2]
[ext_resource path="res://HighTeleport.tscn" type="PackedScene" id=3]
[ext_resource path="res://data/scenes/Computer.tscn" type="PackedScene" id=4]
[ext_resource path="res://data/scenes/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://data/scripts/World.gd" type="Script" id=6]
[ext_resource path="res://data/lives/lives3.png" type="Texture" id=7]
[ext_resource path="res://data/audio/Shanghai Action1.wav" type="AudioStream" id=8]

[node name="world2" type="Node"]
script = ExtResource( 6 )

[node name="background" type="Sprite" parent="."]
position = Vector2( -336, 0 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
centered = false

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -1, 4, 0, -65536, 4, 0, -65535, 4, 0, -65534, 4, 0, -65533, 4, 0, -65532, 4, 0, -65531, 4, 0, -65530, 4, 0, -65529, 4, 0, -65528, 4, 0, -65527, 4, 0, -65526, 4, 0, -65525, 4, 0, -65524, 4, 0, -65523, 4, 0, -65522, 4, 0, -65521, 4, 0, -65520, 4, 0, -65519, 4, 0, -65518, 4, 0, -65517, 4, 0, -65516, 4, 0, 65535, 4, 0, 20, 4, 0, 131071, 4, 0, 65556, 4, 0, 196607, 4, 0, 131092, 4, 0, 262143, 4, 0, 196628, 4, 0, 327679, 4, 0, 262147, 33, 0, 262160, 33, 0, 262164, 4, 0, 393215, 4, 0, 327682, 12, 0, 327683, 13, 0, 327684, 14, 0, 327695, 12, 0, 327696, 13, 0, 327697, 14, 0, 327700, 4, 0, 458751, 4, 0, 393224, 30, 0, 393225, 31, 0, 393226, 31, 0, 393227, 32, 0, 393236, 4, 0, 524287, 4, 0, 458759, 12, 0, 458760, 13, 0, 458761, 13, 0, 458762, 13, 0, 458763, 13, 0, 458764, 14, 0, 458772, 4, 0, 589823, 4, 0, 524308, 4, 0, 655359, 4, 0, 589826, 35, 0, 589841, 35, 0, 589844, 4, 0, 720895, 4, 0, 655361, 33, 0, 655362, 34, 0, 655377, 34, 0, 655378, 33, 0, 655380, 4, 0, 786431, 4, 0, 720896, 1, 0, 720897, 1, 0, 720898, 1, 0, 720899, 1, 0, 720900, 1, 0, 720901, 1, 0, 720902, 1, 0, 720903, 1, 0, 720904, 1, 0, 720905, 1, 0, 720906, 1, 0, 720907, 1, 0, 720908, 1, 0, 720909, 1, 0, 720910, 1, 0, 720911, 1, 0, 720912, 1, 0, 720913, 1, 0, 720914, 1, 0, 720915, 1, 0, 720916, 4, 0 )

[node name="Bar" type="Sprite" parent="."]
position = Vector2( 300, 30 )
texture = ExtResource( 7 )

[node name="RightTeleport" parent="." instance=ExtResource( 3 )]
position = Vector2( 638, 160 )
next_world = "res://data/worlds/world3.tscn"

[node name="LeftTeleport" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 160 )
next_world = "res://data/worlds/world1.tscn"

[node name="Player" parent="." instance=ExtResource( 5 )]
position = Vector2( 24, 320 )

[node name="Enemy" parent="." instance=ExtResource( 4 )]
position = Vector2( 558.151, 325.631 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -20.0
autoplay = true
[connection signal="arrowPlayer" from="Player" to="." method="_on_Player_arrowPlayer"]
[connection signal="lose" from="Player" to="." method="_on_Player_lose"]
[connection signal="sword_instance" from="Player" to="." method="_on_Player_sword_instance"]
